# PSoXide-2

./: Cargo.toml  Makefile  config.example.toml
crates/app/src/: main.rs
crates/cdrom/src/: lib.rs
crates/core/src/: lib.rs  scheduler.rs
crates/core/src/bus/: mod.rs
crates/core/src/cpu/: exceptions.rs  registers.rs
crates/core/src/timers/: mod.rs
crates/gpu/src/: command_buffer.rs  commands.rs  lib.rs  status.rs  vram.rs
emulator/app/: Cargo.toml
emulator/app/src/: config.rs  fullscreen.wgsl  main.rs
emulator/cdrom/: Cargo.toml
emulator/cdrom/src/: lib.rs
emulator/core/: Cargo.toml
emulator/core/src/: lib.rs  sio.rs
emulator/core/src/bus/: dma.rs  mod.rs
emulator/core/src/cpu/: exceptions.rs  icache.rs  interpreter.rs  mod.rs
emulator/core/src/timers/: mod.rs
emulator/gpu/: Cargo.toml
emulator/gpu/src/: commands.rs  display.rs  lib.rs  rasterizer.rs  status.rs  vram.rs
emulator/spu/: Cargo.toml
emulator/spu/src/: lib.rs
