[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/gpu",
    "crates/spu",
    "crates/cdrom",
    "crates/app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
bitflags = "2"
crossbeam-channel = "0.5"
